--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jayfulstory.github.io/my-second-react/",
+  "homepage": "https://jayfulstory.github.io/react-shop/",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
